--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
     "axios": "^1.12.0",
     "axios-retry": "^4.5.0",
@@ -25,6 +26,7 @@
     "p-queue": "^8.1.1",
     "pino": "^9.9.5",
     "pino-pretty": "^13.1.1",
+    "stats-lite": "^2.2.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
