--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@solana/spl-token": "^0.4.14",
+    "@jito-foundation/stake-deposit-interceptor-sdk": "^1.6.2",
+    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.98.4",
     "axios": "^1.12.0",
     "axios-retry": "^4.5.0",
