--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "pino": "^9.9.5",
     "pino-pretty": "^13.1.1",
     "stats-lite": "^2.2.0",
+    "telegraf": "^4.16.3",
+    "telegraf-session-local": "^2.1.1",
     "zod": "^4.1.8"
   },
   "devDependencies": {
@@ -37,7 +39,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.1",
+    "@types/node": "^24.5.2",
     "babel-jest": "^30.1.2",
     "jest": "^30.1.3",
     "ts-jest": "^29.4.2",
