--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,11 @@
 {
-  "projects": [
+  "builds": [
     {
       "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "use": "@vercel/static-build"
     }
   ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+  "routes": [
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
