--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,7 +2,7 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-    "rootDir": ".",                  // allow both src/ and root files
+    "rootDir": ".",                  
     "outDir": "dist",
 
     // Environment Settings
@@ -19,14 +19,6 @@
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
 
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
-
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
@@ -40,9 +32,13 @@
     "resolveJsonModule": true
   },
   "include": [
-    "src/**/*.ts",
-    "telegram_bot.ts",
-    "tests/**/*.ts",
-    "src/new_test.ts"
+    "src/index.ts",       // explicitly include entry file
+    "src/**/*.ts",        // all other backend sources
+    "telegram_bot.ts",    // bot at root
+    "tests/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
